navbar is now fixed

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,8 +1,9 @@
 <mat-toolbar color="primary" class="nav__container">
   <mat-toolbar-row class="nav__row">
     <div routerLink="/home" class="nav__icon-container">
-      <h1 class="nav__logo-text ">Grapevine</h1>
+      <h1 class="nav__logo-text ">Grapevines</h1>
     </div>
+
     <div class="nav__link-container">
       <button mat-button routerLink="/pricing">Pricing</button>
       <button mat-button routerLink="/learn-more">Learn more</button>
