--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,15 +1,19 @@
 :host {
   position: absolute;
-  width: 100%;
-  height: 100%;
+  top: 64px;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 .header {
-  position: relative;
-  max-width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
 }
 
 .main {
-  position: relative;
   height: 100%;
 }
