Section introduction is now done

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,3 +1,18 @@
-<section class="introduction">
-    hello
+<section class="intro">
+  <div class="intro__container">
+    <div class="intro__feedback-cluster">
+      <img src="../../assets/landing-page/feedback-cluster.svg" alt="grape cluster feedback illustration" class="intro__cluster">
+    </div>
+
+    <div class="intro__text mat-typography">
+      <h1 class="intro__title">
+        Anonymous, secure
+        <br>feedback in the workplace
+      </h1>
+      <p class="intro__description">
+        Grapevines helps prevent a toxic culture in the workplace with a simple, efficient interface allowing employees to submit
+        anonymous feedback while feeling secure and able to talk about anything they want.
+      </p>
+    </div>
+  </div>
 </section>
