--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="intro__text mat-typography">
-      <h1 class="intro__title">
+      <h1 class="intro__headline">
         Anonymous, secure
         <br>feedback in the workplace
       </h1>
