--- a/src/app/landing-page/scss/_section-introduction.scss
+++ b/src/app/landing-page/scss/_section-introduction.scss
@@ -21,12 +21,12 @@
     flex-direction: column;
     width: 38rem;
     margin: 5rem 0 0 auto;
-    & .intro__title {
+    & .intro__headline {
       opacity: .87;
       line-height: 56px;
       font-size: 48px;
       font-weight: 500;
-      color: #1C073B;
+      color: #190e29;
     }
     & .intro__description {
       opacity: .54;
