Added sass path to themes

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,7 +8,7 @@
       <button mat-button routerLink="/pricing">Pricing</button>
       <button mat-button routerLink="/learn-more">Learn more</button>
       <button mat-button routerLink="/library">Your library</button>
-      <button mat-raised-button color="accent">Sign in</button>
+      <button routerLink="/portal" mat-raised-button color="accent">Sign in</button>
     </div>
   </mat-toolbar-row>
 </mat-toolbar>
