--- a/src/app/landing-page/scss/_base.scss
+++ b/src/app/landing-page/scss/_base.scss
@@ -1,4 +1,3 @@
 @import '~@angular/material/theming';
-@import '~@app/../themes/grape-theme';
-
+@import 'grape-theme';
 @import './section-introduction';
