--- a/src/app/landing-page/scss/_base.scss
+++ b/src/app/landing-page/scss/_base.scss
@@ -1,3 +1,3 @@
 @import '~@angular/material/theming';
 @import 'grape-theme';
-@import './section-introduction';
+@import './sections/section-introduction';
