Edited nav buttons to be more appropriate

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,10 +5,10 @@
     </div>
 
     <div class="nav__link-container">
+      <button mat-button routerLink="/faq">FAQ</button>
       <button mat-button routerLink="/pricing">Pricing</button>
-      <button mat-button routerLink="/learn-more">Learn more</button>
-      <button mat-button routerLink="/library">Your library</button>
-      <button routerLink="/portal" mat-raised-button color="accent">Sign in</button>
+      <button mat-button routerLink="/join">Join a cluster</button>
+      <button routerLink="/create" mat-raised-button color="accent">Create your grapevine</button>
     </div>
   </mat-toolbar-row>
 </mat-toolbar>
