Added register component and fixed a few things

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -10,8 +10,13 @@
         <br>feedback in the workplace
       </h1>
       <p class="intro__description">
-        Grapevines helps prevent a toxic culture in the workplace with a simple, efficient interface allowing employees to submit
-        anonymous feedback while feeling secure and able to talk about anything they want.
+        <span class="intro__title--color">
+          Grapevines
+        </span>
+        <span class="intro__desc--opacity">
+          helps prevent a toxic culture in the workplace with a simple, efficient interface allowing employees to submit anonymous
+          feedback while feeling secure and able to talk about anything they want.
+        </span>
       </p>
     </div>
   </div>
