Spiced up the registration page

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -14,8 +14,8 @@
           Grapevines
         </span>
         <span class="intro__desc--opacity">
-          helps prevent a toxic culture in the workplace with a simple, efficient interface allowing employees to submit anonymous
-          feedback while feeling secure and able to talk about anything they want.
+          helps prevent a toxic culture with a simple, efficient interface where employees submit anonymous feedback while feeling
+          confident and secure.
         </span>
       </p>
     </div>
