--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,8 @@
 @import url(https://fonts.googleapis.com/icon?family=Material+Icons);
 @import url(https://fonts.googleapis.com/css?family=Roboto:300,400,500);
-@import '~@angular/material/theming';
+@import "./themes/grape-theme";
 @include mat-core();
-@import './themes/grape-theme';
+
 .grape-theme {
   @include angular-material-theme($grape-theme);
 }
