--- a/src/app/auth/containers/register/register-page.component.scss
+++ b/src/app/auth/containers/register/register-page.component.scss
@@ -10,10 +10,12 @@
 }
 
 .title {
+  text-align: center;
   margin: 0;
   opacity: 0.87;
 }
 
 .subtitle {
+  text-align: center;
   opacity: 0.54;
 }
