--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,15 +1,17 @@
-<mat-toolbar color="primary" class="container">
-  <mat-toolbar-row>
-    <figure routerLink="/">
-      <img class="logo">
-      <figcaption>Grapevines</figcaption>
-    </figure>
+<div class="container">
+  <figure routerLink="/">
+    <img class="logo" src="../../../../assets/logo.svg">
+    <figcaption>Grapevines</figcaption>
+  </figure>
 
-    <nav>
-      <button mat-button routerLink="/faq">FAQ</button>
-      <button mat-button routerLink="/pricing">Pricing</button>
-      <button mat-button routerLink="/join">Join a cluster</button>
-      <button mat-raised-button color="accent" routerLink="/create">Create your grapevine</button>
-    </nav>
-  </mat-toolbar-row>
-</mat-toolbar>
+  <nav>
+    <button mat-button routerLink="/faq">FAQ</button>
+    <button mat-button routerLink="/pricing">Pricing</button>
+    <button mat-button routerLink="/join">Join a cluster</button>
+    <button mat-raised-button color="accent" routerLink="/create">Create your grapevine</button>
+  </nav>
+
+  <button mat-button class="sidenav-button" (click)="openMenu()">
+    <mat-icon>menu</mat-icon>
+  </button>
+</div>
