--- a/src/app/auth/components/register-form/register-form.component.html
+++ b/src/app/auth/components/register-form/register-form.component.html
@@ -1,17 +1,45 @@
 <form class="form-container" [formGroup]="registerForm">
-  <mat-form-field color="accent">
-    <input matInput placeholder="Email" formControlName="email">
-    <mat-hint *ngIf="registerForm.controls['email'].valid">We'll send you a confirmation email</mat-hint>
-    <mat-error *ngIf="!registerForm.controls['email'].valid">{{ getEmailError() }}</mat-error>
-  </mat-form-field>
 
-  <mat-form-field color="accent">
-    <input matInput type="password" placeholder="Password" formControlName="password">
-    <mat-error *ngIf="!registerForm.controls['password'].valid">{{ getPasswordError() }}</mat-error>
-  </mat-form-field>
+  <div class="form-row" formGroupName="emailGroup">
+    <mat-form-field color="accent">
+      <input matInput placeholder="Email" formControlName="email">
+
+      <mat-hint *ngIf="registerForm.get('emailGroup.email').valid; else emailError">
+        We'll send you a confirmation email
+      </mat-hint>
+      <mat-error *ngIf="!registerForm.get('emailGroup.email').valid">
+        {{ getEmailError() }}
+      </mat-error>
+    </mat-form-field>
+
+    <mat-form-field color="accent">
+      <input matInput placeholder="Confirm email" formControlName="emailConfirm">
+
+      <mat-error *ngIf="!registerForm.get('emailGroup.emailConfirm').valid">
+        Email does not match
+      </mat-error>
+    </mat-form-field>
+  </div>
+
+  <div class="form-row" formGroupName="passwordGroup">
+    <mat-form-field color="accent">
+      <input matInput type="password" placeholder="Password" formControlName="password">
+
+      <mat-error *ngIf="!registerForm.get('passwordGroup.password').valid">
+        {{ getPasswordError() }}
+      </mat-error>
+    </mat-form-field>
+
+    <mat-form-field color="accent">
+      <input matInput type="password" placeholder="Confirm password" formControlName="passwordConfirm">
+
+      <mat-error *ngIf="!registerForm.get('passwordGroup.passwordConfirm').valid">
+        Password does not match
+      </mat-error>
+    </mat-form-field>
+  </div>
 
   <button mat-raised-button type="submit" color="accent" class="submit-button" [disabled]="!registerForm.valid">Continue</button>
 </form>
-
 
 <p routerLink="/join" color="accent" class="join-link" [class.join-link--opacity]="registerForm.dirty">If you have a code, click here to join instead</p>
