--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -1,39 +1,65 @@
+@import "./theming";
+
 :host {
-  display: block;
-  height: 4rem;
+  display: flex;
+  justify-content: center;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   z-index: 2;
+  height: 4rem;
+  background-color: mat-color($primary);
+  box-shadow: 0 1px 15px grey;
 }
 
-mat-toolbar {
+.container {
   display: flex;
   align-items: center;
-  justify-content: center;
   height: 100%;
+  width: 80rem;
 }
 
-mat-toolbar-row {
-  max-width: 80rem;
-}
-
-nav {
+.sidenav-button {
+  display: block;
   margin-left: auto;
+  min-width: 2.6rem;
 }
 
 figure {
+  margin-left: 0.9rem;
+
   &:hover {
     cursor: pointer;
   }
+
   & .logo {
     display: block;
     width: 2.5rem;
     margin: 0 auto;
   }
+
   & figcaption {
     line-height: 1.15;
     margin-bottom: 0.2rem;
+    font-size: 1.1rem;
+  }
+}
+
+nav {
+  display: none;
+  margin-left: auto;
+  margin-right: 0.9rem;
+}
+
+// Hide navigation links and show sidenav toggle button
+
+@media (min-width: 720px) {
+  .sidenav-button {
+    display: none;
+  }
+
+  nav {
+    display: block;
   }
 }
