--- a/src/app/core/containers/app-root/app.component.scss
+++ b/src/app/core/containers/app-root/app.component.scss
@@ -5,11 +5,40 @@
   height: 100%;
 }
 
-header {
+mat-sidenav-container {
   display: block;
+  height: 100%;
+}
+
+mat-sidenav {
+  width: 20rem;
+  display: flex;
+  flex-direction: column;
+
+  & .close-button {
+    margin-left: auto;
+    padding: 0;
+    min-width: 3rem;
+  }
+
+  & > nav {
+    display: flex;
+    flex-direction: column;
+    margin: 1rem;
+
+    & > button {
+      font-size: 1.2rem;
+      font-weight: 400;
+      margin-bottom: 1rem;
+    }
+  }
+}
+
+header {
   height: 4rem;
 }
 
 main {
+  display: block;
   height: calc(100% - 4rem);
 }
