--- a/src/app/auth/components/register-form/register-form.component.html
+++ b/src/app/auth/components/register-form/register-form.component.html
@@ -4,18 +4,23 @@
     <mat-form-field color="accent">
       <input matInput placeholder="Email" formControlName="email">
 
-      <mat-hint *ngIf="registerForm.get('emailGroup.email').valid; else emailError">
+      <mat-hint *ngIf="registerForm.get('emailGroup.email').valid">
         We'll send you a confirmation email
       </mat-hint>
-      <mat-error *ngIf="!registerForm.get('emailGroup.email').valid">
-        {{ getEmailError() }}
+
+      <mat-error *ngIf="registerForm.get('emailGroup.email').hasError('email')">
+        Email is not valid
       </mat-error>
     </mat-form-field>
 
     <mat-form-field color="accent">
-      <input matInput placeholder="Confirm email" formControlName="emailConfirm">
+      <input matInput placeholder="Confirm email" formControlName="emailConfirm" [errorStateMatcher]="matcher">
 
-      <mat-error *ngIf="!registerForm.get('emailGroup.emailConfirm').valid">
+      <mat-error *ngIf="registerForm.get('emailGroup.emailConfirm').hasError('required')">
+        Confirm email is required
+      </mat-error>
+
+      <mat-error *ngIf="registerForm.get('emailGroup').hasError('noMatch')">
         Email does not match
       </mat-error>
     </mat-form-field>
@@ -25,15 +30,23 @@
     <mat-form-field color="accent">
       <input matInput type="password" placeholder="Password" formControlName="password">
 
-      <mat-error *ngIf="!registerForm.get('passwordGroup.password').valid">
-        {{ getPasswordError() }}
+      <mat-error *ngIf="registerForm.get('passwordGroup.password').hasError('required')">
+        A password is required
+      </mat-error>
+
+      <mat-error *ngIf="registerForm.get('passwordGroup.password').hasError('minlength')">
+        Your password has to be at least 6 characters long
       </mat-error>
     </mat-form-field>
 
     <mat-form-field color="accent">
-      <input matInput type="password" placeholder="Confirm password" formControlName="passwordConfirm">
+      <input matInput type="password" placeholder="Confirm password" formControlName="passwordConfirm" [errorStateMatcher]="matcher">
 
-      <mat-error *ngIf="!registerForm.get('passwordGroup.passwordConfirm').valid">
+      <mat-error *ngIf="registerForm.get('passwordGroup.passwordConfirm').hasError('required')">
+        Confirm password is required
+      </mat-error>
+
+      <mat-error *ngIf="registerForm.get('passwordGroup').hasError('noMatch')">
         Password does not match
       </mat-error>
     </mat-form-field>
