--- a/src/app/auth/components/register-form/register-form.component.html
+++ b/src/app/auth/components/register-form/register-form.component.html
@@ -11,6 +11,10 @@
       <mat-error *ngIf="registerForm.get('emailGroup.email').hasError('email')">
         Email is not valid
       </mat-error>
+
+      <mat-error *ngIf="registerForm.get('emailGroup.email').hasError('authError')">
+        {{ registerErrorMsg }}
+      </mat-error>
     </mat-form-field>
 
     <mat-form-field color="accent">
@@ -52,7 +56,7 @@
     </mat-form-field>
   </div>
 
-  <button mat-raised-button type="submit" color="accent" class="submit-button" [disabled]="!registerForm.valid">Continue</button>
+  <button mat-raised-button type="submit" color="accent" class="submit-button" [disabled]="!registerForm.valid" (click)="onSubmit()">Continue</button>
 </form>
 
 <p routerLink="/join" color="accent" class="join-link" [class.join-link--opacity]="registerForm.dirty">If you have a code, click here to join instead</p>
