Removed store from presentaional component to container

--- a/src/app/auth/components/register-form/register-form.component.html
+++ b/src/app/auth/components/register-form/register-form.component.html
@@ -13,7 +13,7 @@
       </mat-error>
 
       <mat-error *ngIf="registerForm.get('emailGroup.email').hasError('authError')">
-        {{ registerErrorMsg }}
+        {{ errorMsg.err }}
       </mat-error>
     </mat-form-field>
 
