--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -7,8 +7,8 @@
   <nav>
     <button mat-button routerLink="/faq">FAQ</button>
     <button mat-button routerLink="/pricing">Pricing</button>
-    <button mat-button routerLink="/join">Join a cluster</button>
-    <button mat-raised-button color="accent" routerLink="/create">Create your grapevine</button>
+    <button mat-button color="accent" routerLink="/create">Create your grapevine</button>
+    <button mat-raised-button color="accent" routerLink="/login">Log in</button>
   </nav>
 
   <button mat-button class="sidenav-button" (click)="openMenu()">
