--- a/src/app/auth/components/register/register-form/register-form.component.html
+++ b/src/app/auth/components/register/register-form/register-form.component.html
@@ -8,13 +8,12 @@
         We'll send you a confirmation email
       </mat-hint>
 
-      <mat-error *ngIf="registerForm.get('emailGroup.email').hasError('email')">
-        Email is not valid
+      <mat-error *ngIf="registerForm.get('emailGroup.email').hasError('email')">Email is required</mat-error>
+
+      <mat-error>
+        {{ fireAuthError }}
       </mat-error>
 
-      <mat-error *ngIf="registerForm.get('emailGroup.email').hasError('authError')">
-        {{ errorMsg.err }}
-      </mat-error>
     </mat-form-field>
 
     <mat-form-field color="accent">
@@ -41,6 +40,10 @@
       <mat-error *ngIf="registerForm.get('passwordGroup.password').hasError('minlength')">
         Your password has to be at least 6 characters long
       </mat-error>
+
+      <mat-error>
+        {{ fireAuthError }}
+      </mat-error>
     </mat-form-field>
 
     <mat-form-field color="accent">
@@ -56,7 +59,7 @@
     </mat-form-field>
   </div>
 
-  <button mat-raised-button type="submit" color="accent" class="submit-button" [disabled]="!registerForm.valid" (click)="onSubmit()">Continue</button>
+  <button mat-raised-button color="accent" class="submit-button" [disabled]="!registerForm.valid" (click)="onSubmit()">Continue</button>
 </form>
 
 <p routerLink="/join" color="accent" class="join-link" [class.join-link--opacity]="registerForm.dirty">If you have a code, click here to join instead</p>
